...
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Results</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
...
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="forms">Blank Forms</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_space_in_answer_singular">Warning: underlying value %s has spaces</string>
    <string name="invalid_space_in_answer_plural">Warning: underlying values %s have spaces</string>
    <string name="jump_to_beginning">Go To Start</string>
...
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse form.</string>
    <string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
...
