...
            android:id="@+id/buttonholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/select_all"
                android:textSize="16sp" />
...
