...
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="?colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/add_button"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="@+id/add_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
...
